# nyt-solver

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  Connections.cpp  README.md  Solver.hpp  THEORY.md  WHITEPAPER.md  WORDS16.txt  Wordle.cpp  main.cpp  wordle.txt
.github/workflows/: ci.yml  pages.yml
scripts/: build_wasm.sh  build_whitepaper_pdf.py  memcheck.sh  profile_flamegraph.sh  wordle_benchmark.py  wordle_benchmark_ab.sh
tests/: wordle_tests.cpp
web/: aletheia_wasm.js  aletheia_wasm.wasm  aletheia_wasm_mt.js  aletheia_wasm_mt.wasm  app.js  coi-serviceworker.js  index.html  pca_worker.js  wasm_api.cpp
